--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-﻿<h2>Login</h2>
+<h2>Welcome to <b><i>PartnerPortal</i></b>.<br> Please Login.</h2>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="username">Username</label>
