--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 ﻿<h1>Hi {{currentUser.firstName}}!</h1>
-<p>You're logged in to <b><i>PartnerPortal</i></b>!</p>
+<p>You're logged in to <b><i>PartnerPortal!</i></b></p>
 <h3>All registered users:</h3>
 <ul>
     <li *ngFor="let user of users">
